<resources>
    <string name="app_name">SuwasethaVaccineManagement</string>
    <string name="sign_out">Sign Out</string>
    <string name="description">Protect Against COVID-19</string>
    <string name="sub_description">We are here to help you to get a COVID-19 vaccination to protect against COVID-19</string>
    <string name="btn_reserve">RESERVE YOUR VACCINE</string>
    <string name="btn_reservation">RESERVATION</string>
    <string name="tv_enter_id">ID</string>
    <string name="edit_id">Enter ID</string>
    <string name="tv_age_add">Age</string>
    <string name="tv_vacc_type_add">Vaccine Type</string>
    <string name="tv_date_add">Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="tv_allergies">Any Allergies</string>
    <string name="tv_dose">Dose</string>
    <string name="rdbtn_first">First</string>
    <string name="rdbtn_second">Second</string>
    <string name="btn_reserve_add">Reserve</string>
    <string name="tv_id_update">ID</string>
    <string name="tv_age_update">Age</string>
    <string name="tv_vcc_type_update">Vaccine Type</string>
    <string name="tv_date_update">Date</string>
    <string name="tv_allergies_update">Any Allergies</string>
    <string name="tv_dose_update">Dose</string>
    <string name="signout">Sign Out</string>
    <string name="toolbar_reserve">Reserve Your Vaccine</string>
    <string name="rd_btn_first">First</string>
    <string name="rd_btn_second">Second</string>
    <string name="btn_update_page">Update</string>
    <string name="toolbar_update">Update</string>
    <string name="txt_id_view">ID</string>
    <string name="txt_age_view">Age</string>
    <string name="txt_vcc_type_view">Vaccine Type</string>
    <string name="txt_allergies_view">Any Allergies</string>
    <string name="txt_date_view">Date</string>
    <string name="txt_dose_view">Dose</string>
    <string name="btn_update_view">Update</string>
    <string name="btn_cancel_view">Cancel</string>
    <string name="toolbar_view">Reservation Details</string>
    <string name="tv_sign_up">Sign Up</string>
    <string name="edit_password">Password</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Mobile Number</string>
    <string name="email">Email</string>
    <string name="checkbox_agree">I agree all conditions</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_signout">Sign Out</string>
    <string name="edit_login_un">Email</string>
    <string name="edit_login_pass">Password</string>
    <string name="btn_login">Login</string>
    <string name="date_picker">Pick Date</string>
    <string name="toolbar_home">Suwasetha</string>
    <string name="tv_profile_update">Update</string>
    <string name="profile_name_update">Name</string>
    <string name="profile_address_update">Address</string>
    <string name="profile_phone_update">Mobile Number</string>
    <string name="profile_email_update">Email</string>
    <string name="profile_password_update">Password</string>
    <string name="btn_profile_update">Update</string>
    <string name="profile_agree_update">I agree all conditions</string>
    <string name="btn_profile_signout">Sign Out</string>
    <string name="tv_profile_name">Name</string>
    <string name="tv_profile_address">Address</string>
    <string name="tv_profile_phone">Mobile Number</string>
    <string name="tv_profile_email">Email</string>
    <string name="btn_prof_update">Update</string>
    <string name="btn_prof_cancel">Cancle</string>
    <string name="tv_enter_name">Name</string>
    <string name="txtid">ID</string>
    <string name="btn_add">SUBMIT</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_signup">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_viewdata">View Reservation</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_update">Update</string>
    <string name="edit_password_confirm">Confirm Password</string>
</resources>