<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_signin"
        android:textColor="@color/btn_back_color"
        android:textSize="12sp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_signout"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_home" />

    <TextView
        android:id="@+id/description"
        android:layout_width="412dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:background="@color/description"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/sub_description"
        android:layout_width="413dp"
        android:layout_height="85dp"
        android:background="@color/description"
        android:foregroundGravity="center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/sub_description"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="416dp"
        android:layout_height="233dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin"
        app:srcCompat="@drawable/covid" />

    <Button
        android:id="@+id/btn_reserve"
        android:layout_width="222dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:background="@color/btn_back_color"
        android:text="@string/btn_reserve"
        app:backgroundTint="@color/btn_back_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_description" />

    <Button
        android:id="@+id/btn_reservation"
        android:layout_width="223dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="59dp"
        android:background="@color/btn_back_color"
        android:text="@string/btn_reservation"
        app:backgroundTint="@color/btn_back_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reserve" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_width="411dp"
        android:layout_height="55dp"
        android:background="@color/toolbar_backcolor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/toolbar_home"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/btn_signout"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_signout"
        android:textColor="@color/btn_back_color"
        android:textSize="12sp"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_home" />

</androidx.constraintlayout.widget.ConstraintLayout>