<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity8">

    <Button
        android:id="@+id/btn_profile_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/btn_profile_signout"
        android:textColor="@color/sign_out"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="197dp"
        android:layout_height="170dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_profile_signout"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/tv_profile_name"
        android:textColorHint="@color/txt_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tv_profile_address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/tv_profile_address"
        android:textColorHint="@color/txt_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />

    <TextView
        android:id="@+id/tv_profile_phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/tv_profile_phone"
        android:textColorHint="@color/txt_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_address" />

    <TextView
        android:id="@+id/tv_profile_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/tv_profile_email"
        android:textColorHint="@color/txt_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_phone" />

    <Button
        android:id="@+id/btn_prof_update"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:text="@string/btn_prof_update"
        android:textSize="18sp"
        app:backgroundTint="@color/btn_back_color"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_prof_cancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_prof_cancel"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:text="@string/btn_prof_cancel"
        android:textSize="18sp"
        app:backgroundTint="@color/btn_back_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_prof_update"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_email" />
</androidx.constraintlayout.widget.ConstraintLayout>