<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7">

    <TextView
        android:id="@+id/tv_profile_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="138dp"
        android:layout_marginRight="138dp"
        android:text="@string/tv_profile_update"
        android:textColor="@color/txt_color"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profile_name_update"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:ems="10"
        android:hint="@string/profile_name_update"
        android:inputType="textPersonName"
        android:textColorHint="@color/txt_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_update" />

    <EditText
        android:id="@+id/profile_address_update"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/profile_address_update"
        android:inputType="textMultiLine"
        android:textColorHint="@color/txt_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_update" />

    <EditText
        android:id="@+id/profile_phone_update"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:ems="10"
        android:hint="@string/profile_phone_update"
        android:inputType="phone"
        android:textColorHint="@color/txt_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_address_update" />

    <EditText
        android:id="@+id/profile_email_update"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:ems="10"
        android:hint="@string/profile_email_update"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/txt_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_phone_update" />

    <EditText
        android:id="@+id/profile_password_update"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:ems="10"
        android:hint="@string/profile_password_update"
        android:inputType="textPassword"
        android:textColorHint="@color/txt_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email_update" />

    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:entries="@array/user_type_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_password_update" />

    <Button
        android:id="@+id/btn_profile_update"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="159dp"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="33dp"
        android:text="@string/btn_profile_update"
        app:backgroundTint="@color/btn_back_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_agree_update" />

    <CheckBox
        android:id="@+id/profile_agree_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:text="@string/profile_agree_update"
        android:textColor="@color/txt_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner6" />
</androidx.constraintlayout.widget.ConstraintLayout>