<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/txt_id_view"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/txt_id_view"
        android:textColor="@color/txt_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/view_id"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_age_view"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/txt_age_view"
        android:textColor="@color/txt_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/view_age"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_allergies_view"
        android:layout_width="140dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/txt_allergies_view"
        android:textColor="@color/txt_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/view_allergies"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_date_view"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/txt_date_view"
        android:textColor="@color/txt_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/view_date"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_dose_view"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/txt_dose_view"
        android:textColor="@color/txt_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/view_dose"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_view"
        android:layout_width="411dp"
        android:layout_height="55dp"
        android:background="@color/toolbar_backcolor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/toolbar_view"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/view_id"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_id_view"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_view" />

    <TextView
        android:id="@+id/view_age"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_age_view"
        app:layout_constraintTop_toBottomOf="@+id/view_id" />

    <TextView
        android:id="@+id/view_date"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txt_date_view"
        app:layout_constraintTop_toBottomOf="@+id/view_age" />

    <TextView
        android:id="@+id/view_allergies"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_allergies_view"
        app:layout_constraintTop_toBottomOf="@+id/view_date" />

    <TextView
        android:id="@+id/view_dose"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="119dp"
        android:layout_marginLeft="119dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_dose_view"
        app:layout_constraintTop_toBottomOf="@+id/view_allergies" />

    <Button
        android:id="@+id/btn_update_view"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="73dp"
        android:text="@string/btn_update_view"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/btn_back_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dose_view" />

    <Button
        android:id="@+id/btn_cancel_view"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="188dp"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_cancel_view"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/btn_back_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_update_view"
        app:layout_constraintTop_toBottomOf="@+id/view_dose"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>